<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Daily Planner</string>
    <string name="title_activity_tip_calculator">Daily Planner</string>

    <string name="task_label">Enter Tasks and check them as you complete them. Press reset to clear.</string>
    <string name="bill_amount"></string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="title_activity_settings">Settings</string>

    <string name="remember_percent_title">Dark Mode</string>

    <string name="title_activity_about">About</string>

    <string name="task1">Task 1</string>
    <string name="task2">Task 2</string>
    <string name="task3">Task 3</string>
    <string name="task4">Task 4</string>
    <string name="task5">Task 5</string>
    <string name="buttonReset">Reset</string>
    <string name="textViewVersion">Version information</string>
    <string name="versionPara">
        <![CDATA[
        \n
          v 0.60\n
        Last update: 2/21/2020
        ]]>
    </string>
    <string name="textViewContact">Contact Information</string>
    <string name="contactPara">
        <![CDATA[
        \n
          Email: thatstraveling@gmail.com\n
        Phone: (765) 376-6225\n
        Discord: Tepes#5035\n
        Website: https://naomikeller.github.io
        ]]>
    </string>
    <string name="textViewHelp">Help</string>
    <string name="textViewHelp2">
        <![CDATA[
        This program\'s intent is to provide a place for individuals to keep track of their
        daily tasks and check them off as they complete them.
        \n\n
           You can use the text box at the top of the main application to enter tasks and they
        will fill out the list. Once you have completed a task, you may click on the task
        in the list to check it as complete. Once every task for that day is complete, or
        you wish to delete all tasks in the list, use the Reset button at the top of the screen.
        \n\n
           Additional settings may be found in the settings menu, which you can access using the
        settings button, also at the top of the screen.
        ]]>
    </string>
    <string name="cardTitle">Theme</string>
    <string name="Text1" />
    <string name="Text2" />
    <string name="Text3" />
    <string name="Text4" />
    <string name="Text5" />
    <string name="textLightButton">Light</string>
    <string name="textButtonDark">Dark</string>
</resources>