<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textViewVersion1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="25dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:text="@string/textViewVersion"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/textViewVersion2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewVersion1"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="-13dp"
        android:text="@string/versionPara"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/textViewContact1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewVersion2"
        android:layout_alignStart="@+id/textViewVersion1"
        android:layout_alignLeft="@+id/textViewVersion1"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="19dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/textViewContact"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/textViewContact2"
        android:layout_width="174dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewVersion2"
        android:layout_alignStart="@+id/textViewVersion2"
        android:layout_alignLeft="@+id/textViewVersion2"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="35dp"
        android:text="@string/contactPara"
        android:textSize="10sp"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/textViewHelp1"
        android:layout_width="64dp"
        android:layout_height="46dp"
        android:layout_below="@+id/textViewContact1"
        android:layout_alignStart="@+id/textViewContact1"
        android:layout_alignLeft="@+id/textViewContact1"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="62dp"
        android:text="@string/textViewHelp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/colorText"/>

    <TextView
        android:id="@+id/textViewHelp2"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewContact2"
        android:layout_alignStart="@+id/textViewContact2"
        android:layout_alignLeft="@+id/textViewContact2"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="39dp"
        android:paddingRight="20dp"
        android:paddingBottom="50dp"
        android:text="@string/textViewHelp2"
        android:textSize="10sp"
        android:textColor="@color/colorText"/>
</RelativeLayout>